<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.baopingx.myapplication.GestureBuilderActivity">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <ListView
            android:id="@android:id/list"

            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1.0" />

        <TextView
            android:id="@android:id/empty"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1.0"

            android:gravity="center"

            android:text="@string/gestures_loading"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            style="@android:style/ButtonBar"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <Button
                android:id="@+id/addButton"
                android:onClick="addGesture"

                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:enabled="false"
                android:text="@string/button_add" />

            <Button
                android:id="@+id/reloadButton"
                android:onClick="reloadGestures"

                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:enabled="false"
                android:text="@string/button_reload" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
