<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.baopingx.myapplication.CreateGestureActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dip"

                android:text="@string/prompt_gesture_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/gesture_name"
                android:layout_width="0dip"
                android:layout_weight="1.0"
                android:layout_height="wrap_content"

                android:maxLength="40"
                android:singleLine="true" />

        </LinearLayout>

        <android.gesture.GestureOverlayView
            android:id="@+id/gestures_overlay"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1.0"

            android:gestureStrokeType="multiple" />

        <LinearLayout
            style="@android:style/ButtonBar"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <Button
                android:id="@+id/done"

                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:enabled="false"

                android:onClick="addGesture"
                android:text="@string/button_done" />

            <Button
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:onClick="cancelGesture"
                android:text="@string/button_discard" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
